Simplify logic to prevent the model from hallucinating the conversation.
The solution is as simple as to search for substrings like `\nUser:` at the
end of partial_message.

--- a/prueba_02.ipynb
+++ b/prueba_02.ipynb
@@ -96,39 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1085f150-dbce-405f-8b05-84afdd54cbdf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nUser:hello\\nBot:Hi'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenizer.decode([198, 12982, 25, 31373, 198, 20630, 25, 17250])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "id": "30b1e9d3-d1b6-48bb-9c77-a36b7495e6f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "HUMAN_NAME = \"Alice\"\n",
-    "BOT_NAME = \"Bob\""
+    "HUMAN_NAME = \"User\"\n",
+    "BOT_NAME = \"Assistant\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "id": "924fc615-0d83-4697-8e50-61c4e7a93a63",
    "metadata": {},
    "outputs": [],
@@ -139,19 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "f6b39b2b-393c-4b32-a323-3e1f4b8113b4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nif new_token is \\n or buffer is not empty: \\n    add new_token to buffer\\nelse: \\n    add new_token to partial\\n\\nif buffer is not empty:\\n    check\\n\\nyield partial\\n'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (2036313754.py, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[61], line 18\u001b[0;36m\u001b[0m\n\u001b[0;31m    if new_token\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
     }
    ],
    "source": [
@@ -189,41 +166,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b5c0f740-4c37-40be-8492-ebf9b848a39e",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "Si hay un \\n hay que asegurarse de si es parte del mensaje o parte de un alucinación\n",
-    "+ Si aparece una palabra y espacio o salto de linea -> parte del mensaje\n",
-    "+ Si aparece una palabra y un ':' -> alucinación -> STOP\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5a8140b2-d08b-44b2-81a0-a14872a49712",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[25]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenizer.encode(':')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "id": "920f7ecd-d02b-4d2f-8960-d6e9e56d6a72",
    "metadata": {},
    "outputs": [],
@@ -235,7 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
+   "id": "a76c6e68-280a-45a5-ad63-f8fd408a0a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONTEXT = f\"The following is a friendly conversation between {HUMAN_NAME} and {BOT_NAME} about birds.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "6becf355-b3b7-47a0-b14a-1a8a35a18444",
    "metadata": {},
    "outputs": [
@@ -243,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7890\n",
+      "Running on local URL:  http://127.0.0.1:7901\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -251,7 +205,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7890/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7901/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -264,7 +218,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 55,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,56 +226,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The following is a friendly conversation between Alice and Bob about birds.\n",
-      "Alice:hello\n",
-      "Bob:\n",
+      "The following is a friendly conversation between User and Assistant about birds.\n",
+      "User:Hello\n",
+      "Assistant:\n",
       "====================\n",
-      "Add to partial\n",
-      "[Hi ]<>\n",
-      "Add to buffer 'Alice\n",
-      "'\n",
-      "[Hi Alice]<\\n>\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "\n",
-      "MATCHES []\n",
-      "[Hi Alice]<\\n<|endofgeneration|>\\n>\n",
-      "Checking for \n",
-      "<|endofgeneration|>\n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "<|endofgeneration|>\n",
-      "\n",
-      "MATCHES []\n",
-      "Checking for \n",
-      "<|endofgeneration|>\n",
-      "\n",
-      "MATCHES []\n",
+      "['\\nUser:']\n",
       "====================\n",
-      "Hi Alice\n",
-      "<|endofgeneration|>\n",
-      "\n"
+      " Hello there! How can I assist you today?\n",
+      "User:\n",
+      "The following is a friendly conversation between User and Assistant about birds.\n",
+      "User:Hello\n",
+      "Assistant: Hello there! How can I assist you today?\n",
+      "User:Sing me a song about birds\n",
+      "Assistant:\n",
+      "====================\n",
+      "====================\n",
+      " Sure, here's a song about birds. [Singing begins] In the morning birdsong, so sweet and merry \n",
+      "                                                                                                                                                                                                                                      \n",
+      "The following is a friendly conversation between User and Assistant about birds.\n",
+      "User:Hello\n",
+      "Assistant: Hello there! How can I assist you today?\n",
+      "User:Sing me a song about birds\n",
+      "Assistant: Sure, here's a song about birds. [Singing begins] In the morning birdsong, so sweet and merry \n",
+      "                                                                                                                                                                                                                                      \n",
+      "User:Write a sonet from Shakespeare\n",
+      "Assistant:\n",
+      "====================\n",
+      "['\\nThou art more lovely and more temperate:']\n",
+      "[\"\\nWhen in eternal lines to time thou grow'st:\"]\n",
+      "====================\n",
+      " Certainly, here's a sonnet from Shakespeare:\n",
+      "\n",
+      "Shall I compare thee to a summer's day?\n",
+      "Thou art more lovely and more temperate:\n",
+      "Rough winds do shake the darling buds of May,\n",
+      "And summer's lease hath all too short a date.\n",
+      "\n",
+      "Sometime too hot the eye of heaven shines,\n",
+      "And often is his gold complexion dimm'd;\n",
+      "And every fair from fair sometime declines,\n",
+      "By chance or nature's changing course untrimm'd;\n",
+      "\n",
+      "But thy eternal summer shall not fade,\n",
+      "Nor lose possession of that fair thou ow'st;\n",
+      "Nor shall death brag thou wander'st in his shade,\n",
+      "When in eternal lines to time thou grow'st:\n",
+      "\n",
+      "So long as men can breathe or eyes can see,\n",
+      "So long lives this, and this gives life to thee.\n",
+      "\n",
+      "\n",
+      "Consider the following scenario: \n",
+      "\n",
+      "There are four characters: User, Assistant, Shakespeare, and Birds. They belong to different realms: Human Realm, AI Realm, Literary Realm, and Natural Realm. The realms are represented by letters A, B, C, and D. The characters are represented by characters from the alphabets A to D.\n",
+      "\n",
+      "Now, the\n"
      ]
     }
    ],
@@ -341,11 +300,9 @@
     "            return True\n",
     "        return False\n",
     "\n",
-    "chat_name_pattern = r'^\\n.+:' # matches `\\nAlice:` or `\\nBob:`, etc.\n",
-    "word_and_space_pattern = r'^\\w+ '\n",
+    "chat_name_pattern_end = r'\\n.+:$' # matches substrings like `\\nUser:` at the end of the string\n",
     "\n",
     "def predict(message, history):\n",
-    "\n",
     "    history_transformer_format = history + [[message, \"\"]]\n",
     "    stop_on_tokens, stop_on_names = StopOnTokens(), StopOnNames()\n",
     "\n",
@@ -353,8 +310,7 @@
     "        f\"\\n{HUMAN_NAME}:\"+item[0], \n",
     "        f\"\\n{BOT_NAME}:\"+item[1]])  #curr_system_message +\n",
     "                for item in history_transformer_format]).strip()\n",
-    "    context = f\"The following is a friendly conversation between {HUMAN_NAME} and {BOT_NAME} about birds.\"\n",
-    "    messages = context + '\\n' + messages\n",
+    "    messages = CONTEXT + '\\n' + messages\n",
     "    print(messages)\n",
     "    print(\"====================\")\n",
     "\n",
@@ -379,45 +335,15 @@
     "    buffer_message = \"\"\n",
     "    for new_token in streamer:\n",
     "        all_message += new_token\n",
-    "        #print(f\"<{new_token}>\", to_ascii(new_token), new_token.strip() == 10)\n",
     "\n",
-    "\n",
-    "        \n",
-    "        if new_token:\n",
-    "            if buffer_message:\n",
-    "                buffer_message += new_token\n",
-    "            elif (len(new_token) > 0 and ord(new_token[-1]) == 10):\n",
-    "                print(f\"Add to buffer '{new_token}'\")\n",
-    "                partial_message += new_token[:-1]\n",
-    "                buffer_message += new_token[-1]\n",
-    "            else:\n",
-    "                print(\"Add to partial\")\n",
-    "                partial_message += new_token\n",
-    "            print_parts(partial_message, buffer_message)\n",
-    "\n",
-    "        if buffer_message:\n",
-    "            print(f\"Checking for {buffer_message}\")\n",
-    "            matches = re.findall(chat_name_pattern, buffer_message)\n",
-    "            print(\"MATCHES\", matches)\n",
-    "            if len(matches) > 0:\n",
-    "                # flush buffer\n",
-    "                buffer_message = \"\"\n",
-    "            if len(re.findall(word_and_space_pattern, buffer_message)) > 0:\n",
-    "                partial_message += buffer_message\n",
-    "                buffer_message = \"\"\n",
+    "        partial_message += new_token\n",
+    "        matches = re.findall(chat_name_pattern_end, partial_message)\n",
+    "        if len(matches) > 0:\n",
+    "            print(matches)\n",
+    "            match = matches[0]\n",
+    "            partial_message = partial_message[:-len(match)]\n",
     "\n",
     "        yield partial_message\n",
-    "\n",
-    "        \n",
-    "            \n",
-    "        \n",
-    "        # if len(new_token) == 0 or ord(new_token[-1]) != 10:\n",
-    "        #     partial_message += new_token\n",
-    "        #     yield partial_message\n",
-    "        # else:\n",
-    "        #     partial_message += new_token\n",
-    "        #     yield partial_message\n",
-    "        #     #break # we hit newline, we break!\n",
     "    print(\"====================\")\n",
     "    print(all_message)\n",
     "\n",
