--- a/simple_phi2_chatbot.ipynb
+++ b/simple_phi2_chatbot.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0261dec7-7ed8-40a9-a34b-f09630d4d5e9",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "420099d3-040c-4dbd-9581-8887ccfe6ae1",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:00<00:00,  2.23it/s]\n",
+      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:02<00:00,  1.43s/it]\n",
+      "WARNING:root:Some parameters are on the meta device device because they were offloaded to the disk and cpu.\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     },
@@ -51,13 +52,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your device is cuda\n"
+      "Your device is cpu\n"
      ]
     }
    ],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"microsoft/phi-2\", device_map=\"auto\", torch_dtype=\"auto\", trust_remote_code=True)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    \"microsoft/phi-2\", \n",
+    "    device_map=\"auto\", \n",
+    "    torch_dtype=\"auto\" if device == \"cuda\" else torch.float, \n",
+    "    trust_remote_code=True\n",
+    ")\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/phi-2\", trust_remote_code=True)\n",
     "\n",
     "print(\"Your device is\", device)"
@@ -82,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1d241629-5771-47f8-b113-714343dc47a6",
    "metadata": {},
    "outputs": [],
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "9979197b-1180-4987-a02c-a40abd4e0f07",
    "metadata": {},
    "outputs": [],
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "98b8a2fa-e487-403f-8f67-598db21eba16",
    "metadata": {},
    "outputs": [],
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "03cd3e32-2263-4fe0-acd0-5035edd91f6a",
    "metadata": {},
    "outputs": [
@@ -146,9 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7875\n",
-      "\n",
-      "Thanks for being a Gradio user! If you have questions or feedback, please join our Discord server and chat with us: https://discord.gg/feTf9x3ZSB\n",
+      "Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -156,7 +160,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7875/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -169,7 +173,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
