Clean code. Limit line length.

--- a/simple_phi2_chatbot.ipynb
+++ b/simple_phi2_chatbot.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0261dec7-7ed8-40a9-a34b-f09630d4d5e9",
    "metadata": {},
    "outputs": [
@@ -30,12 +30,13 @@
     "import torch\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer, StoppingCriteria, StoppingCriteriaList, TextIteratorStreamer\n",
     "from threading import Thread\n",
-    "import re"
+    "import re\n",
+    "from typing import List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "420099d3-040c-4dbd-9581-8887ccfe6ae1",
    "metadata": {},
    "outputs": [
@@ -43,8 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:02<00:00,  1.43s/it]\n",
-      "WARNING:root:Some parameters are on the meta device device because they were offloaded to the disk and cpu.\n",
+      "Loading checkpoint shards: 100%|█████████████████████████████████████████████| 2/2 [00:02<00:00,  1.13s/it]\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     },
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your device is cpu\n"
+      "Your device is cuda\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "1d241629-5771-47f8-b113-714343dc47a6",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "9979197b-1180-4987-a02c-a40abd4e0f07",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "98b8a2fa-e487-403f-8f67-598db21eba16",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "03cd3e32-2263-4fe0-acd0-5035edd91f6a",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7861\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -160,7 +160,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -173,50 +173,53 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from typing import List\n",
-    "\n",
     "class StopOnTokens(StoppingCriteria):\n",
     "    \"\"\"Stops the model if it produces an 'end of text' token\"\"\"\n",
-    "    def __call__(self, input_ids: torch.LongTensor, scores: torch.FloatTensor, **kwargs) -> bool:\n",
+    "    def __call__(self, input_ids: torch.LongTensor, \n",
+    "                 scores: torch.FloatTensor, **kwargs) -> bool:\n",
     "        stop_ids = [50256] # <|endoftext|>\n",
     "        for stop_id in stop_ids:\n",
     "            if input_ids[0][-1] == stop_id:\n",
     "                return True\n",
     "        return False\n",
     "\n",
+    "\n",
     "class StopOnNames(StoppingCriteria):\n",
     "    \"\"\"\n",
-    "    Stops the model when it starts hallucinating future turns of the conversation\n",
+    "    Stops the model when it starts hallucinating future turns of the \n",
+    "    conversation.\n",
     "\n",
-    "    It stops the token generation when we find a token sequence \"\\n<name>:\", for\n",
-    "    example \"\\nUser:\" or \"\\nAssistant:\".\n",
+    "    It stops the token generation when we find a token sequence of the form \n",
+    "    \"\\n<name>:\", for example \"\\nUser:\" or \"\\nAssistant:\".\n",
     "    \"\"\"\n",
-    "\n",
     "    EOL_TOKEN = 198\n",
     "    COLON_TOKEN = 25\n",
     "    \n",
     "    def __init__(self, tokenized_names: List[List[int]]):\n",
     "        self.tokenized_names = tokenized_names\n",
     "    \n",
-    "    def __call__(self, input_ids: torch.LongTensor, scores: torch.FloatTensor, **kwargs) -> bool:\n",
+    "    def __call__(self, input_ids: torch.LongTensor, \n",
+    "                 scores: torch.FloatTensor, **kwargs) -> bool:\n",
     "        for tokens in self.tokenized_names:\n",
     "            template = [self.EOL_TOKEN, *tokens, self.COLON_TOKEN]\n",
     "            if input_ids[0][-len(template):].tolist() == template:\n",
     "                return True\n",
     "        return False\n",
     "\n",
-    "chat_name_pattern_end = r'\\n.+:$' # matches substrings like `\\nUser:` at the end of the string\n",
+    "\n",
+    "chat_name_pattern_end = r'\\n.+:$' # matches substrings like `\\nUser:` at the end\n",
     "\n",
     "def predict(message, history):\n",
     "    history_transformer_format = history + [[message, \"\"]]\n",
     "    stop_on_tokens = StopOnTokens()\n",
-    "    stop_on_names = StopOnNames([tokenizer.encode(HUMAN_NAME), tokenizer.encode(BOT_NAME)])\n",
+    "    stop_on_names = StopOnNames(\n",
+    "        [tokenizer.encode(HUMAN_NAME), tokenizer.encode(BOT_NAME)])\n",
     "\n",
     "    messages = \"\".join([\"\".join(\n",
     "        [f\"\\n{HUMAN_NAME}:\"+item[0], f\"\\n{BOT_NAME}:\"+item[1]]\n",
@@ -224,7 +227,8 @@
     "    messages = CONTEXT + '\\n' + messages\n",
     "\n",
     "    model_inputs = tokenizer([messages], return_tensors=\"pt\").to(device)\n",
-    "    streamer = TextIteratorStreamer(tokenizer, timeout=10., skip_prompt=True, skip_special_tokens=True)\n",
+    "    streamer = TextIteratorStreamer(tokenizer, timeout=10., \n",
+    "                                    skip_prompt=True, skip_special_tokens=True)\n",
     "    generate_kwargs = dict(\n",
     "        model_inputs,\n",
     "        streamer=streamer,\n",
@@ -246,9 +250,18 @@
     "        if match:\n",
     "            partial_message = partial_message[:-len(match.group())]\n",
     "        yield partial_message\n",
-    "        \n",
+    "\n",
+    "\n",
     "gr.ChatInterface(predict).queue().launch()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b158a411-cd9e-453c-91e1-29daeb0be7b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
