Add EOL as stop token

--- a/simple_phi2_chatbot.ipynb
+++ b/simple_phi2_chatbot.ipynb
@@ -44,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|█████████████████████████████████████████████| 2/2 [00:02<00:00,  1.13s/it]\n",
+      "Loading checkpoint shards: 100%|██████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  2.35it/s]\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "98b8a2fa-e487-403f-8f67-598db21eba16",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,29 @@
     "if LANG == \"ES\":\n",
     "    CONTEXT = f\"El siguiente texto es una conversación amistosa entre {HUMAN_NAME} y {BOT_NAME} en español.\"\n",
     "else:\n",
-    "    CONTEXT = f\"The following is a friendly conversation between {HUMAN_NAME} and {BOT_NAME} in English.\""
+    "    CONTEXT = f\"The following is a friendly conversation between {HUMAN_NAME} and {BOT_NAME} in English. \\\n",
+    "    Be concise and reply only to what you're asked. Do not extend your message longer than one line.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3ae523ab-90a8-48ad-9ab2-8811db370e9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[198]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.encode('\\n')"
    ]
   },
   {
@@ -144,46 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "03cd3e32-2263-4fe0-acd0-5035edd91f6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class StopOnTokens(StoppingCriteria):\n",
     "    \"\"\"Stops the model if it produces an 'end of text' token\"\"\"\n",
     "    def __call__(self, input_ids: torch.LongTensor, \n",
     "                 scores: torch.FloatTensor, **kwargs) -> bool:\n",
-    "        stop_ids = [50256] # <|endoftext|>\n",
+    "        stop_ids = [50256, 198] # <|endoftext|> and EOL\n",
     "        for stop_id in stop_ids:\n",
     "            if input_ids[0][-1] == stop_id:\n",
     "                return True\n",
@@ -222,7 +214,7 @@
     "        [tokenizer.encode(HUMAN_NAME), tokenizer.encode(BOT_NAME)])\n",
     "\n",
     "    messages = \"\".join([\"\".join(\n",
-    "        [f\"\\n{HUMAN_NAME}:\"+item[0], f\"\\n{BOT_NAME}:\"+item[1]]\n",
+    "        [f\"\\n{HUMAN_NAME}: \"+item[0], f\"\\n{BOT_NAME}:\"+item[1]]\n",
     "    ) for item in history_transformer_format]).strip()\n",
     "    messages = CONTEXT + '\\n' + messages\n",
     "\n",
@@ -254,14 +246,6 @@
     "\n",
     "gr.ChatInterface(predict).queue().launch()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b158a411-cd9e-453c-91e1-29daeb0be7b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
