--- a/simple_phi2_chatbot.ipynb
+++ b/simple_phi2_chatbot.ipynb
@@ -31,7 +31,8 @@
     "from transformers import AutoModelForCausalLM, AutoTokenizer, StoppingCriteria, StoppingCriteriaList, TextIteratorStreamer\n",
     "from threading import Thread\n",
     "import re\n",
-    "from typing import List"
+    "from typing import List\n",
+    "from details import DETAILS"
    ]
   },
   {
@@ -44,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  2.35it/s]\n",
+      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:02<00:00,  1.13s/it]\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     },
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "98b8a2fa-e487-403f-8f67-598db21eba16",
    "metadata": {},
    "outputs": [],
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "3ae523ab-90a8-48ad-9ab2-8811db370e9a",
    "metadata": {},
    "outputs": [
@@ -145,7 +146,7 @@
        "[198]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,10 +167,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "03cd3e32-2263-4fe0-acd0-5035edd91f6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7860\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class StopOnTokens(StoppingCriteria):\n",
     "    \"\"\"Stops the model if it produces an 'end of text' token\"\"\"\n",
@@ -244,7 +275,7 @@
     "        yield partial_message\n",
     "\n",
     "\n",
-    "gr.ChatInterface(predict).queue().launch()"
+    "gr.ChatInterface(predict,**DETAILS[LANG]).queue().launch()"
    ]
   }
  ],
